# slsqp

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
examples/: paraboloid.rs
slsqp/: CMakeLists.txt  README.md  compile_commands.json  nlopt-util.h  nlopt.h  nlopt_config.h.in  rescale.c  slsqp.c  slsqp.h  slsqp.rs  stop.c  timer.c
src/: lib.rs  slsqp.rs
