[package]
authors = ["Remi Lafage <remi.lafage@onera.fr>"]
name = "slsqp"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE.md"
description = "SLSQP optimizer for Rust"
readme = "README.md"
repository = "https://github.com/relf/slsqp/"
keywords = ["optimizer", "optimization", "constrained", "derivative-free"]
categories = ["algorithms", "api-bindings", "science"]
documentation = "https://docs.rs/slsqp"

[dependencies]
libc = "0.2"
argmin = "0.8.0"
serde = "1"
instant = "0.1"

[dev-dependencies]
approx = "0.5"
