[package]
authors = ["Remi Lafage <remi.lafage@onera.fr>"]
name = "slsqp"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "SLSQP optimizer for Rust"
readme = "README.md"
repository = "https://github.com/relf/slsqp/"
keywords = ["optimizer", "optimization", "constrained"]
categories = ["algorithms", "science"]
documentation = "https://docs.rs/slsqp"

[dependencies]
libc = "0.2"

[dev-dependencies]
approx = "0.5"
